...
        collectionView.backgroundColor = .white
        collectionView.showsHorizontalScrollIndicator = false
        collectionView.translatesAutoresizingMaskIntoConstraints = false
        return collectionView
    }()
    
    let tipsPercentArray = ["0%", "10%", "15%", "20%", "25%", "30%"]
    var tipsCount: Double = 0
    
    override init(frame: CGRect) {
        super.init(frame: frame)
        
        setupView()
...
